--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,7 @@
         <activity android:name=".Activity.TermsActivity" />
 
         <activity android:name=".Activity.PaymentWebActivity" />
+        <activity android:name=".Activity.PaymentActivity" />
         <activity android:name="com.nhn.android.naverlogin.ui.OAuthLoginActivity" android:theme="@android:style/Theme.Translucent.NoTitleBar"/>
 
 
