--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,8 @@
         <activity android:name=".Activity.JoinActivity" />
         <activity android:name=".Activity.PrivacyActivity" />
         <activity android:name=".Activity.TermsActivity" />
+        <activity android:name=".Activity.OwnerMainActivity" />
+        <activity android:name=".Activity.OwnerHistoryActivity" />
 
         <activity android:name=".Activity.PaymentWebActivity" />
         <activity android:name=".Activity.PaymentActivity" />
